# SAGES-python

./: .editorconfig  LICENSE  README.md  pyproject.toml  requirements.txt
_conf/: Astro_Matt.icls
_trener/01-about/04-exittest/: assignment-a.py
grzeniux/01-about/03-entrytest/: assignment-d.py
grzeniux/02-syntax/01-underscore/: notes.py
grzeniux/09-iterator/07-filter/: assignment-b.py
